--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react"
   },
   "include": [
-    "src"
+    "原始数据的类型限制"
   ]
 }
